[package]
name = "tcp-p2p-node-example"
version = "0.1.0"
authors = ["Egor Ivkov <e.o.ivkov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.4"
chashmap = "2.2.2"
rand = "0.7.3"
bincode = "1.2.1"
clap = "2.33.0"
p2p_node_stats = { git = "https://github.com/eadventurous/p2p-node-stats"}
log = "0.4.0"
env_logger = "0.7.1"

# quinn deps
rustls = { version = "0.17", features = ["quic", "dangerous_configuration"]}
webpki = { version = "0.21"}
rcgen = "0.8"
quinn = {version = "0.6.1", features = ["rustls"] } # needs tokio context to function properly
tokio = { version = "0.2", features = ["rt-core", "rt-threaded", "macros"] }


[dependencies.serde]
version = "1.0.105"
features = ["derive"]

[dependencies.async-std]
version = "1.5.0"
features = ["unstable"]
